--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">In Pro Per</h1>
-      <h2 class="project-tagline">in pro per</h2>
-      <a href="https://github.com/vinniejames/inproper" class="btn">View on GitHub</a>
-      <a href="https://github.com/vinniejames/inproper/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/vinniejames/inproper/tarball/master" class="btn">Download .tar.gz</a>
+      <h2 class="project-tagline">crafting productivity driven software for the legal community</h2>
+      <a href="http://e-squire.io" class="btn">e-squire.io</a>
+      <a href="http://esqjd.com" class="btn">esqjd.com</a>
+      <a href="http://www.legalthree.com/" class="btn">legalthree.com</a>
     </section>
 
     <section class="main-content">
