--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-2918890-14', 'auto');
+      ga('send', 'pageview');
+
+    </script>
     <section class="page-header">
       <h1 class="project-name">In Pro Per</h1>
       <h2 class="project-tagline">crafting productivity driven software for the legal community</h2>
@@ -25,17 +35,17 @@
 <p>Imagine as an attorney, or law student, a world where software worked for you. Ditch the antiquated legacy software that has been forced upon you, in favor of software that works for you.</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Case Law Search at <i>e-squire.io</i></h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Case Law Search at <a href="http://e-squire.io/?inproper"><i>e-squire.io</i></a></h3>
 
       <p>A simple and intuitive <a href="http://e-squire.io/?inproper">free case law search engine</a>. Gather and study case law, research precedent, build citations, discuss with the community.</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#esqjd" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Legal Community Blogging Platform at <i>esqjd.com</i></h3>
+<a id="creating-pages-manually" class="anchor" href="#esqjd" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Legal Community Blogging Platform at <a href="http://esqjd.com/?inproper"><i>esqjd.com</i></a></h3>
 
 <p>Quickly, easily, and most importantly free: create your own legal blog for career enhancement, your personal practice, or even the law firm. Easy to use CMS for editing you content, will have you up and running in no time with your own <a href="http://esqjd.com/?inproper">free legal blog</a> and custom subdomain name.</p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Law Student Resources and Outline Bank <i>legalthree.com</i></h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Law Student Resources and Outline Bank <a href="http://www.legalthree.com/?inproper"><i>legalthree.com</i></a></h3>
 
 <p>Legal Three offers only the best case briefs, course outlines, study guides, crib sheets, and much more. Including all 1L courses, <a href="http://www.legalthree.com/?inproper">bar study guides</a>, and various other course outlines.</p>
 
