--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="http://inproper.org">In Pro Per</a> &copy; 2017</span>
 
-        <span class="site-footer-credits">a 501(c)(3) Organization</span>
+        <span class="site-footer-credits"><!--a 501(c)(3) Organization--></span>
       </footer>
 
     </section>
